--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,12 +25,30 @@ a {
 /*Header*/
 .header{
   background-color:#05386b;
-  overflow: hidden;
-  max-height: 70px;
+  height: 70px;
 }
 
+.header-container {
+  max-width: 1400px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.logo {
+  width: 200px;
+  margin-top: -30px;
+}
+
+.logo img {
+  width: 100%;
+}
+
+
 .header a{
-  float: left;
+  /*float: left;*/
   color: black;
   text-align: center;
   padding: 12px;
@@ -41,14 +59,26 @@ a {
 }
 
 /*Logo*/
+
+/*
 .logo img{
-  float: left;
-  max-height: 50px;
-  margin: 0px 5px
+  position: absolute;
+  left: 15px;
+  top: -30px;
+  width: auto;
+  height: 100%;
+  max-height: 200px;
+  margin: 0px 5px;
+  size: auto;
+}
+*/
+
+.hamburguer-icon {
+  display: none;
 }
 
 .header-right {
-  float: right;
+  margin-top: 20px;
 }
 
 .fas fa-shopping-cart{
@@ -71,6 +101,17 @@ a {
 .header-right img {
   height: 40px;
   width: auto;
+}
+
+@media (max-width: 670px) {
+ 
+  .header-right {
+    display: none;
+  }
+ 
+  .hamburguer-icon {
+    display: block;
+  }
 }
 
 /*Jugar*/
@@ -126,7 +167,7 @@ a {
 .rounded{
   width:100%;
   height: 200px;
-  border-radius: 5%;
+  border-radius: 40%;
   box-sizing: border-box;
 }
 
