--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,7 @@
 	
 	<!--Header-->
 	<header class="header">
+		<div class="header-container">
 			<a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
 			<div class="header-right">
 				<ul>
@@ -25,10 +26,10 @@
 					<li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
 					<li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
 				</ul>
-			</div>	
-		</header>
+			</div>
+		</div>
+	</header>
 		
-	
 	<!--Main Content-->
 	<section class="login">
 		<form action="action_page.php" method="post">
