Se cambió el fondo del body del login.css

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Raleway',sans-serif, Helvetica;
-  background-color: #edf5e1;
+  background-color: rgb(2, 160, 94);
 }
 
 ul,ol{
