--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 				<p class="subtitulo">Reservá tu cancha</P>
 					<form class="container">
 					<div class="row">
-						<select name="localidad" id="localidad" class="col-8 col-lg-3 rounded-pill">
+						<select name="localidad" id="localidad" class="selectpicker col-8 col-lg-3 rounded-pill">
 							<option selected>Localidad</option>
 							<option value="Palermo">Palermo</option>
 							<option value="Recoleta">Recoleta</option>
@@ -46,14 +46,15 @@
 						</select>				
 				
 						<p><label for=""></label></p>
-						<select name="cancha" id="cancha" class="col-8 col-lg-3 rounded-pill">
+						<select name="cancha" id="cancha" class="selectpicker col-8 col-lg-3 rounded-pill">
 							<option selected>Tipo de cancha</option>
-							<option value="cinco">Futbol 5</option>
-							<option value="siete">Futbol 7</option>
-							<option value="once">Futbol 11</option>
+							<option value="F5">Futbol 5</option>
+							<option value="F7">Futbol 7</option>
+							<option value="F9">Futbol 9</option>
+							<option value="F11">Futbol 11</option>
 						</select>
 						
-						<input type="date" name="fecha" placeholder="Fecha" class="col-8 col-lg-3 rounded-pill">
+						<input type="date" name="fecha" placeholder="Fecha" class="selectpicker col-8 col-lg-3 rounded-pill">
 						
 					</div>
 						
