--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
 		
 	<!--Main Content-->
 	<section class="login">
-		<form action="action_page.php" method="post">
+		<form method="post">
 			<div class="container">
 				<h1>Ingresar</h1>
 	  		
