--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -2,228 +2,130 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!--===============================================================================================-->
 	<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
 	<!--===============================================================================================-->
-	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/addProduct.css">
 
-	<title>METEGOL | Home Page</title>
+	<title>METEGOL | Agregar Cancha</title>
 </head>
 <body style="background-color:rgb(2, 160, 94);">
-	<div>
-		
-		<!--Formulario-->
-		<header class="header">
-			<div class="header-container">
-				<a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
-				<div class="header-right">
-					<ul>
-						<li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
-						<li><a href="/torneo">TORNEOS</a></li>
-						<li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
-						<li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
-					</ul>
-				</div>
-				<a href="#" class="hamburguer-icon">TRES RAYITAS</a>
-			</div>
-		</header>
-		
-        <!--Formulario-->
-        <form class="form-horizontal">
-            <fieldset>
-            
-            <!-- Form Name -->
-            <legend>PRODUCTS</legend>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_id">PRODUCT ID</label>  
-              <div class="col-md-4">
-              <input id="product_id" name="product_id" placeholder="PRODUCT ID" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_name">PRODUCT NAME</label>  
-              <div class="col-md-4">
-              <input id="product_name" name="product_name" placeholder="PRODUCT NAME" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_name_fr">PRODUCT DESCRIPTION FR</label>  
-              <div class="col-md-4">
-              <input id="product_name_fr" name="product_name_fr" placeholder="PRODUCT DESCRIPTION FR" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Select Basic -->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_categorie">PRODUCT CATEGORY</label>
-              <div class="col-md-4">
-                <select id="product_categorie" name="product_categorie" class="form-control">
-                </select>
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="available_quantity">AVAILABLE QUANTITY</label>  
-              <div class="col-md-4">
-              <input id="available_quantity" name="available_quantity" placeholder="AVAILABLE QUANTITY" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_weight">PRODUCT WEIGHT</label>  
-              <div class="col-md-4">
-              <input id="product_weight" name="product_weight" placeholder="PRODUCT WEIGHT" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Textarea -->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_description">PRODUCT DESCRIPTION</label>
-              <div class="col-md-4">                     
-                <textarea class="form-control" id="product_description" name="product_description"></textarea>
-              </div>
-            </div>
-            
-            <!-- Textarea -->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="product_name_fr">PRODUCT DESCRIPTION FR</label>
-              <div class="col-md-4">                     
-                <textarea class="form-control" id="product_name_fr" name="product_name_fr"></textarea>
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="percentage_discount">PERCENTAGE DISCOUNT</label>  
-              <div class="col-md-4">
-              <input id="percentage_discount" name="percentage_discount" placeholder="PERCENTAGE DISCOUNT" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="stock_alert">STOCK ALERT</label>  
-              <div class="col-md-4">
-              <input id="stock_alert" name="stock_alert" placeholder="STOCK ALERT" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Search input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="stock_critical">STOCK CRITICAL</label>
-              <div class="col-md-4">
-                <input id="stock_critical" name="stock_critical" placeholder="STOCK CRITICAL" class="form-control input-md" required="" type="search">
-                
-              </div>
-            </div>
-            
-            <!-- Search input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="tutorial">TUTORIAL</label>
-              <div class="col-md-4">
-                <input id="tutorial" name="tutorial" placeholder="TUTORIAL" class="form-control input-md" required="" type="search">
-                
-              </div>
-            </div>
-            
-            <!-- Search input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="tutorial_fr">TUTORIAL FR</label>
-              <div class="col-md-4">
-                <input id="tutorial_fr" name="tutorial_fr" placeholder="TUTORIAL FR" class="form-control input-md" required="" type="search">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="online_date">ONLINE DATE</label>  
-              <div class="col-md-4">
-              <input id="online_date" name="online_date" placeholder="ONLINE DATE" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="author">AUTHOR</label>  
-              <div class="col-md-4">
-              <input id="author" name="author" placeholder="AUTHOR" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="enable_display">ENABLE DISPLAY</label>  
-              <div class="col-md-4">
-              <input id="enable_display" name="enable_display" placeholder="ENABLE DISPLAY" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="comment">COMMENT</label>  
-              <div class="col-md-4">
-              <input id="comment" name="comment" placeholder="COMMENT" class="form-control input-md" required="" type="text">
-                
-              </div>
-            </div>
-            
-            <!-- Text input-->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="approuved_by">APPROUVED BY</label>  
-              <div class="col-md-4">
-              <input id="approuved_by" name="approuved_by" placeholder="APPROUVED BY" class="form-control input-md" required="" type="text">
-                
-             <!-- File Button --> 
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="filebutton">main_image</label>
-              <div class="col-md-4">
-                <input id="filebutton" name="filebutton" class="input-file" type="file">
-              </div>
-            </div>
-            <!-- File Button --> 
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="filebutton">auxiliary_images</label>
-              <div class="col-md-4">
-                <input id="filebutton" name="filebutton" class="input-file" type="file">
-              </div>
-            </div>
-            
-            <!-- Button -->
-            <div class="form-group">
-              <label class="col-md-4 control-label" for="singlebutton">Single Button</label>
-              <div class="col-md-4">
-                <button id="singlebutton" name="singlebutton" class="btn btn-primary">Button</button>
-              </div>
-              </div>
-            
-            </fieldset>
-            </form>
-            
 
-        <!--Footer-->
+	  <!--Header-->
+    <header class="header">
+      <div class="header-container">
+        <a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
+         <div class="header-right">
+          <ul>
+            <li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
+            <li><a href="/torneo">TORNEOS</a></li>
+            <li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
+          </ul>
+         </div>
+        <a href="#" class="hamburguer-icon">TRES RAYITAS</a>
+      </div>
+    </header>
+		
+    <!--Formulario-->
+    <section class="product">
+      <form method="post">
+        <div class="form-container">
+
+          <h1>Agregar Cancha</h1>
+
+          <div class="form-blanks">
+
+            <div class="col-md-6">
+              <label>Nombre del complejo:</label>
+              <input type="text" name="nombreComplejo" required>
+            </div>
+
+            <div class="col-md-6">
+              <label>Nombre de la cancha:</label>
+              <input class="form-control-inline" type="text" placeholder="Cancha 2" name="nombreCancha" required>
+            </div>
+
+            <div>
+              <label>Tipo de cancha: </label>
+                <select required>
+                  <option value="F5">Futbol 5</option>
+                  <option value="F7">Futbol 7</option>
+                  <option value="F9">Futbol 9</option>
+                  <option value="F11">Futbol 11</option>
+                </select>
+            </div>
+
+            <div>
+              <label>Horarios disponibles:</label>
+                <select name="time" id="time" required>
+                  <option label="06:00" value="06:00:00">06:00</option>
+                  <option label="06:30" value="06:30:00">06:30</option>
+                  <option label="07:00" value="07:00:00">07:00</option>
+                  <option label="07:30" value="07:30:00">07:30</option>
+                  <option label="08:00" value="08:00:00">08:00</option>
+                  <option label="08:30" value="08:30:00">08:30</option>
+                  <option label="09:00" value="09:00:00">09:00</option>
+                  <option label="09:30" value="09:30:00">09:30</option>
+                  <option label="10:00" value="10:00:00">10:00</option>
+                  <option label="10:30" value="10:30:00">10:30</option>
+                  <option label="11:00" value="11:00:00">11:00</option>
+                  <option label="11:30" value="11:30:00">11:30</option>
+                  <option label="12:00" value="12:00:00">12:00</option>
+                  <option label="12:30" value="12:30:00">12:30</option>
+                  <option label="13:00" value="13:00:00">13:00</option>
+                  <option label="13:30" value="13:30:00">13:30</option>
+                  <option label="14:00" value="14:00:00">14:00</option>
+                  <option label="14:30" value="14:30:00">14:30</option>
+                  <option label="15:00" value="15:00:00">15:00</option>
+                  <option label="15:30" value="15:30:00">15:30</option>
+                  <option label="16:00" value="16:00:00">16:00</option>
+                  <option label="16:30" value="16:30:00">16:30</option>
+                  <option label="17:00" value="17:00:00">17:00</option>
+                  <option label="17:30" value="17:30:00">17:30</option>
+                  <option label="18:00" value="18:00:00">18:00</option>
+                  <option label="18:30" value="18:30:00">18:30</option>
+                  <option label="19:00" value="19:00:00">19:00</option>
+                  <option label="19:30" value="19:30:00">19:30</option>
+                  <option label="20:00" value="20:00:00">20:00</option>
+                  <option label="20:30" value="20:30:00">20:30</option>
+                  <option label="21:00" value="21:00:00">21:00</option>
+                  <option label="21:30" value="21:30:00">21:30</option>
+                  <option label="22:00" value="22:00:00">22:00</option>
+                  <option label="22:30" value="22:30:00">22:30</option>
+                  <option label="23:00" value="23:00:00">23:00</option>
+                  <option label="23:30" value="23:30:00">23:30</option>
+                </select>
+            </div>
+
+            <div>
+              <label>Fechas disponibles:</label>
+              <input class="form-control-inline" type="date" placeholder="Default input" name="Fechas" required>
+            </div>
+
+            <div>
+              <label>Precio del alquiler por hora: </label>
+              <input class="form-control-inline" type="number" placeholder="0" name="nombreComplejo" required>
+            </div>
+
+            <div>
+              <label>Descripción: </label>
+              <textarea name="descripcionProducto" required> </textarea>
+            </div>     
+          </div>
+
+          <div><button type="submit" class="btn btn-primary">GUARDAR</button></div>
+
+        </div>
+      </form>
+    </section>
+            
+    <!--Footer-->
 		<footer class="footer fixed-bottom">
 			<div class="footer-left">
 				<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
