Fifth commit new images and minor changes

--- a/views/User.ejs
+++ b/views/User.ejs
@@ -9,7 +9,7 @@
 		<!--===============================================================================================-->
 		<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
 		<!--===============================================================================================-->
-		<link rel="stylesheet" href="/css/User.css">
+		<link rel="stylesheet" href="/css/user.css">
 	
 		<title>METEGOL | Registro</title>
 	</head>
