--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,7 +45,7 @@
 				<div><button type="submit" class="btn btn-primary">LOGIN</button></div>
 				<div class="manageUser">
 					<ul>
-						<li><a href="/register"><i class="fas fa-user-plus"></i>     Crear usuario</a></li>
+						<li><a href="/user"><i class="fas fa-user-plus"></i>     Crear usuario</a></li>
 						<li><a href="/forgotpass"><i class="fas fa-unlock"></i>      Recuperar contraseña</a></li>
 					</ul>
 				</div>
