--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,14 @@
 
 	<title>METEGOL | Home Page</title>
 </head>
-<body style="background-color:rgb(2, 160, 94);">
+
+<body>
 	<div>
 		
 		<!--Header-->
 		<header class="header">
 			<div class="header-container">
-				<a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
+				<a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
 				<div class="header-right">
 					<ul>
 						<li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
