--- a/public/css/app.css
+++ b/public/css/app.css
@@ -135,6 +135,7 @@ a {
   justify-content: center;
   padding: 10px;
   margin-top: 50px;
+  background-color: rgba(2, 160, 94, 0.5);
 }
 
 /*Cajas*/
@@ -148,6 +149,7 @@ a {
   padding: 10px;
   margin-top: 50px;
   box-sizing: border-box;
+  background-color: rgba(2, 160, 94);
 }
 
 .rounded{
