--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -14,12 +14,13 @@
 
 	<title>METEGOL | Agregar Cancha</title>
 </head>
-<body style="background-color:rgb(2, 160, 94);">
 
-	  <!--Header-->
+<body>
+
+    <!--Header-->
     <header class="header">
       <div class="header-container">
-        <a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
+        <a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
          <div class="header-right">
           <ul>
             <li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
@@ -33,37 +34,37 @@
     </header>
 		
     <!--Formulario-->
-    <section class="product">
-      <form method="post">
-        <div class="form-container">
 
-          <h1>Agregar Cancha</h1>
-
-          <div class="form-blanks">
-
-            <div class="col-md-6">
+    <div class="align">
+      <div class="form">
+        <form action="/addProduct" method="POST">
+        <h1>Agregar disponibilidad de canchas</h1>
+          <div class="user-form">
+                  
+            <div class="input-fields">
               <label>Nombre del complejo:</label>
-              <input type="text" name="nombreComplejo" required>
-            </div>
-
-            <div class="col-md-6">
-              <label>Nombre de la cancha:</label>
-              <input class="form-control-inline" type="text" placeholder="Cancha 2" name="nombreCancha" required>
-            </div>
-
-            <div>
+              <input type="text" name="complejo" class="input" placeholder="Nombre del Complejo" required>
+              
               <label>Tipo de cancha: </label>
-                <select required>
-                  <option value="F5">Futbol 5</option>
-                  <option value="F7">Futbol 7</option>
-                  <option value="F9">Futbol 9</option>
-                  <option value="F11">Futbol 11</option>
-                </select>
+              <select class="selector" name="jugadores">
+                <option disabled selected>Seleccione tipo de cancha</option>
+                <option value="F5">Futbol 5</option>
+                <option value="F7">Futbol 7</option>
+                <option value="F9">Futbol 9</option>
+                <option value="F11">Futbol 11</option>
+              </select>
+             
+              <label>Fechas disponibles:</label>
+              <input class="form-control-inline" type="date" placeholder="Default input" name="fecha" required>
             </div>
-
-            <div>
+            
+            <div class="input-fields-sd">
+              <label>Nombre de la cancha:</label>
+              <input type="text" class="input" name="nombreCancha" placeholder="Nombre de la cancha" required>
+              
               <label>Horarios disponibles:</label>
-                <select name="time" id="time" required>
+                <select name="horario" id="time" required>
+                  <option disabled selected>Seleccione horario de disponibilidad</option>
                   <option label="06:00" value="06:00:00">06:00</option>
                   <option label="06:30" value="06:30:00">06:30</option>
                   <option label="07:00" value="07:00:00">07:00</option>
@@ -101,30 +102,22 @@
                   <option label="23:00" value="23:00:00">23:00</option>
                   <option label="23:30" value="23:30:00">23:30</option>
                 </select>
-            </div>
-
-            <div>
-              <label>Fechas disponibles:</label>
-              <input class="form-control-inline" type="date" placeholder="Default input" name="Fechas" required>
-            </div>
-
-            <div>
+                
               <label>Precio del alquiler por hora: </label>
-              <input class="form-control-inline" type="number" placeholder="0" name="nombreComplejo" required>
-            </div>
-
-            <div>
-              <label>Descripción: </label>
-              <textarea name="descripcionProducto" required> </textarea>
-            </div>     
+              <input class="input" type="number" name="precio" placeholder="0" name="precioAlquiler" required>
+              </div>
           </div>
 
-          <div><button type="submit" class="btn btn-primary">GUARDAR</button></div>
+          <div class="description">
+              <label>Descripción del producto: </label>
+              <textarea name="descripcion" required> </textarea>
+          </div>
 
-        </div>
+        <div><button type="submit" class="btn btn-primary">GUARDAR</button></div>
       </form>
-    </section>
-            
+      </div>
+    </div>
+        
     <!--Footer-->
 		<footer class="footer fixed-bottom">
 			<div class="footer-left">
@@ -140,10 +133,6 @@
 				</ul>
 			</div>
 		</footer>
-
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>	
 	</div>
 </body>
 </html>
