--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -4,8 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
+	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<!--===============================================================================================-->
 	<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
+	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/productDetail.css">
 	
 	<!-- Compiled and minified Bootstrap CSS -->
@@ -14,16 +17,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Compiled and minified Bootstrap JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+	
 
 	<title>METEGOL | Detalle Cancha</title>
 </head>
-<body style="background-color:rgb(2, 160, 94);">
-	<div>
-		
-		<!--Header-->
+
+	<!--Header-->
 		<header class="header">
 			<div class="header-container">
-				<a href="#default" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
+				<a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
 				<div class="header-right">
 					<ul>
 						<li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
@@ -35,98 +37,135 @@
 				<a href="#" class="hamburguer-icon">TRES RAYITAS</a>
 			</div>
 		</header>
-		<p class="nombreCancha"> <%= cancha.name %></p>
-	<div class="body">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
 		
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="<%= cancha.image1 %>" class="fotoCancha" alt="">
-				</div>
-				<div class="item">
-					<img src="<%= cancha.image2 %>" class="fotoCancha" alt="">
-				</div>
-				<div class="item">
-					<img src="<%= cancha.image3 %>" class="fotoCancha" alt="">
-				</div>
-			</div>
-		
-			<!-- Controls -->
-			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div>
-
-			<!-- Descripcion cancha -->	
 	
-		<div class="descripcion">
-			<h1 class="titulo">Dirección</h1>
-			<p><%= cancha.Address %></p>
-			<a href="https://www.google.com/maps/search/<%= cancha.name %>" frameborder='0'>Ver ubicacion en mapa</a> 
-			<h1 class="titulo">Teléfono</h1>
-			<p><%= cancha.phone %></p>
-			<h1>Servicios</h1>
-			<p><%= cancha.description %></p>
-		</div> 	
-		<section class="reserva">
-			<form action="action_page.php" method="post">
-				<div class="contenedor">
-					<h1>RESERVA</h1>
-					   
-					  	<select class="selector" name="horario">
-							  <option disabled selected>Seleccione un horario</option>
-							  <option value="7">19hs</option>
-							  <option value="8">20hs</option>
-							  <option value="9">21hs</option>
-							  <option value="10">22hs</option>
-							  <option value="11">23hs</option>
-							  
-						  </select>
-						  <select class="selector" name="cantJugadores">
-							<option disabled selected>Cantidad de jugadores</option>
-							<option value="5">5 jugadores</option>
-							<option value="7"> 7 jugadores</option>
-							<option value="11"> 11 jugadores</option>
-						</select>
-					  
-						  <div><button type="submit" class="btn btn-primary">CONFIRMAR RESERVA</button></div> 
-				</div>
-			</form>
-		</section>
-	</div>
-</div>
+	<!--Main Content-->
+	<div class="align">
+		<div class="form">
+			
+			<h1 class="nombreCancha"> <%= cancha.name %></h1>
 		
-		<!--Footer-->
-		<footer class="footer fixed-bottom">
-			<div class="footer-left">
-				<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-				<a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-				<a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-			</div>
-			<div class="footer-right">
-				<ul>
-					<li><a href="/proovedores">¿Querés ser proovedor?</a></li>
-					<li><a href="/quienesomos">¿Quiénes somos?</a></li>
-					<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
-				</ul>
-			</div>
-		</footer>
+			<div class="body">
 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>	
+				<!-- Carousel de imágenes -->
+				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					</ol>
+				
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="<%= cancha.image1 %>" class="fotoCancha" alt="">
+						</div>
+						<div class="item">
+							<img src="<%= cancha.image2 %>" class="fotoCancha" alt="">
+						</div>
+						<div class="item">
+							<img src="<%= cancha.image3 %>" class="fotoCancha" alt="">
+						</div>
+					</div>
+				
+					<!-- Controls -->
+					<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+
+					<!-- Descripción producto -->	
+				<div class="descripcion">
+					<h2 class="titulo">Dirección</h2>
+					<p><%= cancha.Address %></p>
+					<a href="https://www.google.com/maps/search/<%= cancha.name %>" frameborder='0'>Ver ubicacion en mapa</a> 
+					<h2 class="titulo">Teléfono</h2>
+					<p><%= cancha.phone %></p>
+					<h2>Servicios</h2>
+					<p><%= cancha.description %></p>
+				</div> 	
+
+					<!-- Sección confirmar reserva -->	
+				<section class="reserva">
+					<form action="action_page.php" method="post">
+						<div class="contenedor">
+							<h1>RESERVA</h1>
+							
+								<select class="selector" name="horario">
+									<option disabled selected>Seleccione horario</option>
+									<option label="06:00" value="06:00:00">06:00</option>
+									<option label="06:30" value="06:30:00">06:30</option>
+									<option label="07:00" value="07:00:00">07:00</option>
+									<option label="07:30" value="07:30:00">07:30</option>
+									<option label="08:00" value="08:00:00">08:00</option>
+									<option label="08:30" value="08:30:00">08:30</option>
+									<option label="09:00" value="09:00:00">09:00</option>
+									<option label="09:30" value="09:30:00">09:30</option>
+									<option label="10:00" value="10:00:00">10:00</option>
+									<option label="10:30" value="10:30:00">10:30</option>
+									<option label="11:00" value="11:00:00">11:00</option>
+									<option label="11:30" value="11:30:00">11:30</option>
+									<option label="12:00" value="12:00:00">12:00</option>
+									<option label="12:30" value="12:30:00">12:30</option>
+									<option label="13:00" value="13:00:00">13:00</option>
+									<option label="13:30" value="13:30:00">13:30</option>
+									<option label="14:00" value="14:00:00">14:00</option>
+									<option label="14:30" value="14:30:00">14:30</option>
+									<option label="15:00" value="15:00:00">15:00</option>
+									<option label="15:30" value="15:30:00">15:30</option>
+									<option label="16:00" value="16:00:00">16:00</option>
+									<option label="16:30" value="16:30:00">16:30</option>
+									<option label="17:00" value="17:00:00">17:00</option>
+									<option label="17:30" value="17:30:00">17:30</option>
+									<option label="18:00" value="18:00:00">18:00</option>
+									<option label="18:30" value="18:30:00">18:30</option>
+									<option label="19:00" value="19:00:00">19:00</option>
+									<option label="19:30" value="19:30:00">19:30</option>
+									<option label="20:00" value="20:00:00">20:00</option>
+									<option label="20:30" value="20:30:00">20:30</option>
+									<option label="21:00" value="21:00:00">21:00</option>
+									<option label="21:30" value="21:30:00">21:30</option>
+									<option label="22:00" value="22:00:00">22:00</option>
+									<option label="22:30" value="22:30:00">22:30</option>
+									<option label="23:00" value="23:00:00">23:00</option>
+									<option label="23:30" value="23:30:00">23:30</option>
+								</select>
+
+								<select class="selector" name="jugadores">
+									<option selected>Cantidad de jugadores</option>
+									<option value="F5">Futbol 5</option>
+									<option value="F7">Futbol 7</option>
+									<option value="F9">Futbol 9</option>
+									<option value="F11">Futbol 11</option>
+								</select>
+								
+							<div><button type="submit" class="btn btn-primary">CONFIRMAR RESERVA</button></div> 
+						</div>
+					</form>
+				</section>
+			</div>
+		</div>
 	</div>
+				
+	<!--Footer-->
+	<footer class="footer fixed-bottom">
+		<div class="footer-left">
+			<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+			<a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+		</div>
+		<div class="footer-right">
+			<ul>
+				<li><a href="/proovedores">¿Querés ser proovedor?</a></li>
+				<li><a href="/quienesomos">¿Quiénes somos?</a></li>
+				<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
+			</ul>
+		</div>
+	</footer>
 </body>
 </html>
