--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,7 @@
 						<input type="password" class="input" placeholder="Contraseña*" name="pwd" required>
 					</div>
 				</div>
-			<div><button type="submit" class="btn btn-primary">LOGIN</button></div>
+			<div><button type="submit" class="btn btn-primary">INGRESAR</button></div>
 				<div class="manageUser">
 					<ul>
 						<li><a href="/user"><i class="fas fa-user-plus"></i>     Crea tu usuario</a></li>
