--- a/public/css/createField.css
+++ b/public/css/createField.css
@@ -107,16 +107,18 @@ a {
 
 .align{
   text-align: center;
-  margin:10%;
+  margin-top: 70px;
 }
 
 .form{
   display: inline-block;
+  text-align: left;
   top: 50%;
   background: rgba(245, 241, 241, 0.8);
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  max-width: 80%;
 }
 
 .form h1{
@@ -127,42 +129,80 @@ a {
   font-size: 3vh;
 }
 
-.user-form{
+.field-form{
   display: flex;
-  max-width: 550px;
   margin: 0 auto;
 } 
   
-
 .input-fields{
-  display: flex;
   flex-direction: column;
-  margin-right: 4%;
+  margin-right: 2%;
+  width: 100%;
 }
- 
-.input-fields,
-.input-fields-sd
-{
-  width: 50%;
+
+.input-fields-sd{
+  flex-direction: column;
+  width: 100%;
+  margin-left: 2%;
 }
  
 .input-fields input,
 .input-fields-sd input
 {
-  margin: 10px 0;
+  margin: 10px 0px;
   background: transparent;
   border: 0px;
   border-bottom: 2px solid #063549;
-  padding: 10px;
   color:#063549;
   width: 100%;
 }
 
+label{
+  margin: 10px 0px;
+}
+
+.selector{
+  background: transparent;
+  border: 0px;
+  border-bottom: 2px solid #063549;
+  color:#063549;
+  width: 100%;
+  height: 28px;
+  margin: 10px 0px;
+}
+
+/* Eliminar el arrow por default en el type="number" */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance:textfield;
+}
+
 .description{
   float: center;
-  text-align: center;
-  align-items: center;
-  margin-top: 10px;
+  text-align: left;
+  align-items: left;
+}
+
+textarea{
+  background: transparent;
+  border: 0px;
+  border-bottom: 2px solid #063549;
+  color:#063549;
+  width: 100%;
+  height: 28px;
+  margin: 10px 0px;
+}
+
+.imagenes-box{
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  width: 100%;
 }
 
 .btn {
@@ -177,63 +217,8 @@ a {
   float: center;
   cursor: pointer;
   margin-top: 30px;
+  width: 100%;
 }
-
-/* Formulario
-
-.product form{
-  margin: 10px;
-  padding: 50px;
-}
-
-.form-container{
-  background-color: #edf5e1;
-  padding: 30px;
-  border: 2px solid red;
-}
-
-.form-container h1{
-  align-items: center;
-  color: rgb(65, 65, 65);
-  text-align: left;
-  font-style: bold;
-  margin-bottom: 30px;
-  font-size: 3vh;
-  border: 2px solid blueviolet;
-}
-
-.form-blanks{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: flex-start;
-  border: 2px solid green;
-}
-*/
-/*
-input [type=text], input [type=number]{
-  width: 70%;
-  margin: 8px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-#localidad{
-  margin: 8px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-#cancha{
-  margin: 8px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-*/
   
 /*Footer*/
 .footer{
