--- a/public/css/createUser.css
+++ b/public/css/createUser.css
@@ -1,4 +1,3 @@
-
 /*Enlace de fuente */
 
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
@@ -113,11 +112,12 @@ a {
 
 .form{
   display: inline-block;
+  text-align: left;
   background: rgba(245, 241, 241, 0.8);
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
-  width: 50%;
+  max-width: 50%;
 }
 
 .form h1{
@@ -128,6 +128,23 @@ a {
   font-size: 3vh;
 }
 
+.user-form{
+  display: flex;
+  margin: 0 auto;
+} 
+  
+.input-fields{
+  flex-direction: column;
+  margin-right: 2%;
+  width: 100%;
+}
+
+.input-fields-sd{
+  flex-direction: column;
+  width: 100%;
+  margin-left: 2%;
+}
+ 
 .input-fields input,
 .input-fields-sd input
 {
@@ -139,8 +156,6 @@ a {
   color:#063549;
   width: 100%;
 }
- 
-/* Botón SIGNUP*/
 
 .btn {
   background-color:#05386b; ;
@@ -153,23 +168,10 @@ a {
   text-transform: uppercase;
   float: center;
   cursor: pointer;
-  margin-top:30px;
+  margin-top: 30px;
   width: 100%;
 }
-
-.manageUser{
- text-align: left;
- margin-top: 30px;
-}
-
-.manageUser li{
-  margin-top: 20px;
-}
-
-.manageUser a{
-  color: rgb(65, 65, 65);
-}
-
+ 
 /*Footer*/
 .footer{
   background-color:#05386b;
@@ -210,7 +212,8 @@ a {
   margin: 10px;
 }
 
-  /* Mobile first*/
+  
+/* Mobile first*/
 
   @media (min-width:450px) and (orientation:portrait) {
     .container {
@@ -223,11 +226,11 @@ a {
   }}
   
   @media screen and (max-width: 600px){
-    .login-container{
+    .user-form{
       flex-direction: column;
     }
     
-    input{
+    .input-fields{
       width: 100%;
     }
   } 
