--- a/views/showField.ejs
+++ b/views/showField.ejs
@@ -12,14 +12,8 @@
 	<!-- Compiled and minified Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 	<!--===============================================================================================-->
-	<link rel="stylesheet" href="/css/productDetail.css">
+	<link rel="stylesheet" href="/css/showField.css">
 	
-	<!-- Minified JS library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!-- Compiled and minified Bootstrap JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-	
-
 	<title>METEGOL | Detalle Cancha</title>
 </head>
 
@@ -167,6 +161,12 @@
 				<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
 			</ul>
 		</div>
+
+	<!-- Minified JS library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Compiled and minified Bootstrap JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+	
 	</footer>
 </body>
 </html>
