--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<!--===============================================================================================-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<!--===============================================================================================-->
-	<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
+	<%- include("partials/head.ejs")%> 
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/app.css">
 
@@ -18,22 +12,9 @@
 	<div>
 		
 		<!--Header-->
-		<header class="header">
-			<div class="header-container">
-				<a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
-				<div class="header-right">
-					<ul>
-						<li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
-						<li><a href="/torneo">TORNEOS</a></li>
-						<li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
-						<li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
-					</ul>
-				</div>
-				<a href="#" class="hamburguer-icon">TRES RAYITAS</a>
-			</div>
-		</header>
+		<%- include("partials/header.ejs")%> 
 		
-		<!--Contenido-->
+		<!--Main Content-->
 		<section class="jugar">			
 			<h1>METEGOL</h1>
 				<p class="subtitulo">Reservá tu cancha</P>
@@ -88,20 +69,7 @@
 		</div>
 		
 		<!--Footer-->
-		<footer class="footer fixed-bottom">
-			<div class="footer-left">
-				<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-				<a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-				<a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-			</div>
-			<div class="footer-right">
-				<ul>
-					<li><a href="/proovedores">¿Querés ser proovedor?</a></li>
-					<li><a href="/quienesomos">¿Quiénes somos?</a></li>
-					<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
-				</ul>
-			</div>
-		</footer>
+		<%- include("partials/footer.ejs")%> 
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
