--- a/views/createField.ejs
+++ b/views/createField.ejs
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
-	<!--===============================================================================================-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<!--===============================================================================================-->
-	<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
+	<%- include("partials/head.ejs")%> 
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/createField.css">
 
@@ -16,23 +9,10 @@
 </head>
 
 <body>
-
     <!--Header-->
-    <header class="header">
-      <div class="header-container">
-        <a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
-         <div class="header-right">
-          <ul>
-            <li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
-            <li><a href="/torneo">TORNEOS</a></li>
-            <li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
-            <li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
-          </ul>
-         </div>
-        <a href="#" class="hamburguer-icon">TRES RAYITAS</a>
-      </div>
-    </header>
-		
+
+    <%- include("partials/header.ejs")%> 
+    
     <!--Main Content-->
 
     <div class="align">
@@ -43,7 +23,7 @@
                   
             <div class="input-fields">
               <label>Nombre del complejo:</label>
-              <input type="text" name="complexName" class="input" placeholder="Nombre complejo*" required>
+              <input type="text" name="complexName" class="input" placeholder="Nombre del complejo*" required>
               
               <label>Dirección:</label>
               <input type="text" name="address" class="input" placeholder="Calle, altura, barrio, CP*" minlength="6" required>
@@ -60,7 +40,7 @@
             
             <div class="input-fields-sd">
               <label>Nombre de la cancha:</label>
-              <input type="text" class="input" name="name" required>
+              <input type="text" class="input" name="name" placeholder="Nombre de la cancha*" required>
                
               <label>Teléfono:</label>
               <input type="tel" name="phone" class="input" minlength="8" placeholder="12345678*" required>
@@ -73,18 +53,34 @@
 
           <div class="description">
               <label>Servicios: </label>
-              <textarea class="input" name="description" placeholder="Descripción de servicios" required="required"> </textarea>
+              <input class="input" name="description" placeholder="Descripción de servicios*" required>
           </div>
           
-          <!-- <div class="upload-images">
+          <div class="uploads">
             <label>Elige tres imágenes: </label>
 
-            <label class="custom-file">
-              <input type="file" id="file" name="image1" class="input">
-              <span class="control"></span>
-            </label>
-         
-          </div> -->
+            <div class="upload-images">
+
+              <div class="input-group">
+                <div class="custom-file">
+                  <input type="file" name="image1" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                  <label class="custom-file-label" for="inputGroupFile01">Imagen 1</label>
+                </div>
+              </div>
+              <div class="input-group">
+                <div class="custom-file">
+                  <input type="file" name="image2" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                  <label class="custom-file-label" for="inputGroupFile01">Imagen 2</label>
+                </div>
+              </div>
+              <div class="input-group">
+                <div class="custom-file">
+                  <input type="file" name="image3"class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                  <label class="custom-file-label" for="inputGroupFile01">Imagen 3</label>
+                </div>
+              </div>
+           </div>  
+            </div>
 
         <div><button type="submit" value="submit" class="btn btn-primary">GUARDAR</button></div>
       </form>
@@ -92,20 +88,8 @@
     </div>
         
     <!--Footer-->
-		<footer class="footer fixed-bottom">
-			<div class="footer-left">
-				<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-				<a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-				<a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-			</div>
-			<div class="footer-right">
-				<ul>
-					<li><a href="/proovedores">¿Querés ser proovedor?</a></li>
-					<li><a href="/quienesomos">¿Quiénes somos?</a></li>
-					<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
-				</ul>
-			</div>
-		</footer>
+    <%- include("partials/footer.ejs")%> 
+    
 	</div>
 </body>
 </html>
