--- a/views/showField.ejs
+++ b/views/showField.ejs
@@ -1,39 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<%- include("partials/head.ejs")%> 
 	
-	<!--===============================================================================================-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<!--===============================================================================================-->
-	<link href="/css/fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
-	
-	<!-- Compiled and minified Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+	<!-- Minified JS library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Compiled and minified Bootstrap JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/showField.css">
 	
 	<title>METEGOL | Detalle Cancha</title>
 </head>
-
+<body>
 	<!--Header-->
-		<header class="header">
-			<div class="header-container">
-				<a href="/" class="logo"><img src="/images/logo.png" alt="logo de metegol"></a>
-				<div class="header-right">
-					<ul>
-						<li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
-						<li><a href="/torneo">TORNEOS</a></li>
-						<li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
-						<li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
-					</ul>
-				</div>
-				<a href="#" class="hamburguer-icon">TRES RAYITAS</a>
-			</div>
-		</header>
+	<%- include("partials/header.ejs")%> 
 		
-	
 	<!--Main Content-->
 	<div class="align">
 		<div class="form">
@@ -148,25 +130,6 @@
 	</div>
 				
 	<!--Footer-->
-	<footer class="footer fixed-bottom">
-		<div class="footer-left">
-			<a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-			<a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-			<a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-		</div>
-		<div class="footer-right">
-			<ul>
-				<li><a href="/proovedores">¿Querés ser proovedor?</a></li>
-				<li><a href="/quienesomos">¿Quiénes somos?</a></li>
-				<li><a href="/pfrecuentes">Preguntas frecuentes</a></li>
-			</ul>
-		</div>
-
-	<!-- Minified JS library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!-- Compiled and minified Bootstrap JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-	
-	</footer>
+	<%- include("partials/footer.ejs")%> 
 </body>
 </html>
