Added for each on Fields view

--- a/views/createField.ejs
+++ b/views/createField.ejs
@@ -17,7 +17,7 @@
 
     <div class="align">
       <div class="form">
-        <form action="/createField" method="POST">
+        <form action="/createField" method="POST" enctype="multipart/form-data">
         <h1>Agregar cancha</h1>
           <div class="field-form">
                   
