--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<%- include("partials/head.ejs")%> 
+		<%- include("../partials/head.ejs")%> 
 		<!--===============================================================================================-->
 		<link rel="stylesheet" href="/css/login.css">
 	
@@ -12,7 +12,7 @@
  <body>
 	
 	<!--Header-->
-	<%- include("partials/header.ejs")%> 
+	<%- include("../partials/header.ejs")%> 
 		
 	<!--Main Content-->
 	
@@ -28,7 +28,7 @@
 			<div><button type="submit" class="btn btn-primary">INGRESAR</button></div>
 				<div class="manageUser">
 					<ul>
-						<li><a href="/createUser"><i class="fas fa-user-plus"></i>     Crea tu usuario</a></li>
+						<li><a href="/users/create"><i class="fas fa-user-plus"></i>     Crea tu usuario</a></li>
 						<li><a href="/forgotpass"><i class="fas fa-unlock"></i>      Recuperar contraseña</a></li>
 					</ul>
 				</div>	
@@ -36,7 +36,7 @@
 	</div>
 	
 	<!--Footer-->
-	<%- include("partials/footer.ejs")%> 
+	<%- include("../partials/footer.ejs")%> 
 
  </body>
 </html>
