--- a/views/fields/show.ejs
+++ b/views/fields/show.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<%- include("partials/head.ejs")%> 
+	<%- include("../partials/head.ejs")%> 
 	
 	<!-- Minified JS library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<!--Header-->
-	<%- include("partials/header.ejs")%> 
+	<%- include("../partials/header.ejs")%> 
 		
 	<!--Main Content-->
 	<div class="align">
@@ -130,6 +130,6 @@
 	</div>
 				
 	<!--Footer-->
-	<%- include("partials/footer.ejs")%> 
+	<%- include("../partials/footer.ejs")%> 
 </body>
 </html>
