--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
           <li><a href="/buscoequipo">BUSCO EQUIPO</a></li>
           <li><a href="/torneo">TORNEOS</a></li>
           <li><a href="/carrito" title="Carrito"><i class="fas fa-shopping-cart"></i></a></li>
-          <li><a href="/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
+          <li><a href="/users/login" title="Log in"><i class="fas fa-user"></i></i></a></li>
         </ul>
        </div>
       <a href="#" class="hamburguer-icon">TRES RAYITAS</a>
