--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<%- include("partials/head.ejs")%> 
+	<%- include("../partials/head.ejs")%> 
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/createUser.css">
 	
@@ -11,7 +11,7 @@
 <body>
 	
 	 <!--Header-->
-	<%- include("partials/header.ejs")%> 
+	<%- include("../partials/header.ejs")%> 
 	
 	<!--Main Content-->
 
@@ -38,7 +38,7 @@
 	</div>
 	
 	<!--Footer -->
-	<%- include("partials/footer.ejs")%> 
+	<%- include("../partials/footer.ejs")%> 
 	
  </body>
 </html>
